[tool.poetry]
name = "ow-log-parser"
version = "0.1.0"
description = ""
authors = ["Paul Kosel <paul.kosel@rub.de>"]
readme = "README.md"
packages = [{include = "ow_log_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.7"
psycopg2-binary = "^2.9.5"

[tool.poetry.scripts]
main = "ow_log_parser:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
